Adjust button corners to Phoenix. Adjust tag and frame styles. Fix the problem of tag highlights covering active tag.

--- a/chrome/global/browser.css
+++ b/chrome/global/browser.css
@@ -5,7 +5,8 @@
     margin: 1px 3px 3px 3px;
     border-radius: 8px;
     overflow: hidden;
-    border: 1.25px solid rgba(0, 0, 0, 0.1);
+    border: 1.25px solid rgba(0, 0, 0, 0.05);
+    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.1);
   }
   
   :root #browser {
