--- a/chrome/toolbar/navbar.css
+++ b/chrome/toolbar/navbar.css
@@ -1,7 +1,7 @@
 /* EdgeFr-Fox by bmFtZQ - navbar.css */
 
 :root {
-  --toolbarbutton-border-radius: 2px !important;
+  --toolbarbutton-border-radius: 4px !important;
   --toolbarbutton-inner-padding: 7px !important;
   --uc-toolbarbutton-inner-inline-padding: 12px !important;
   --tabs-navbar-shadow-size: 0 !important;
